
A web app that allows Diablo IV players keep track of their Transmog
collections.

## [1.7.2]

### Updated

- Updated presentation of excluded items
- Updated collection counters to negate excluded items
- Disable collected toggle when item is excluded

### Fixed

- Sidebar item immediately disappearing after marking item excluded
- Tooltips not appearing when list view is enabled

## [1.7.1] - 2024-07-31

### Updated

- Nav menu will close when clicking anywhere on the page
- Add tooltip to "toggle collection" button
- Marked "Enthusiastic Admire" and "Diabolic Roamer" titles unobtainable
- Moved "Well-Wisher" title to Feats of Strength

## [1.7.0] - 2024-07-29

### Added

- Challenges collection
- URL routing and browser history between collections
  - e.g. https://diablo4.dad/transmogs/general

### Updated

- Improved skeletons layout for smoother transitions when loading
- Improved dynamic loading of images, reduced screen shift
- Improved class icon layout
- Transitions when opening and closing collections
- Collection menu visibility now toggled via to clicks
- Renamed "hidden" toggle to "excluded" to make its purpose clearer
- Changed colour of excluded toggle to red
- Added half second delay to toggle collection selection
- Renamed collection "Standard Armor" to "Armor"
- Renamed collection "Standard Weapon" to "Weapons"
- Moved Seasonal reputation board rewards to own sub-category
- Moved essential collections into sub-categories (zones, monsters etc.)

### Fixed

- Progress Bar counter changing when "hide collected items" option enabled
- Hide collected items option reducing progress bar when enabled
- Overflow/scroll issue when the settings sidebar is open
- Progress bar flicker when loading
- Fur-Lined Boots + Mitts erroneously selected from Season 2 collection

### Removed

- Challenge category from the Essential Collection
- Well-Wisher title from the Quest collection
- Unused hide progress bar option
- Superfluous hide completed collections option
